--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
 <main class="container">
   <app-game-header></app-game-header>
+  <div class="d-flex justify-content-center mt-2">
+    <app-game-board></app-game-board>
+  </div>
 </main>
