--- a/src/app/components/game-header/game-header.component.html
+++ b/src/app/components/game-header/game-header.component.html
@@ -6,6 +6,6 @@
     id="score"
     class="bg-white rounded mx-auto fs-1 d-flex justify-content-center align-items-center"
   >
-    <span>0</span>
+    <span>{{ score }}</span>
   </div>
 </div>
