--- a/src/app/components/end-game-modal/end-game-modal.component.html
+++ b/src/app/components/end-game-modal/end-game-modal.component.html
@@ -3,5 +3,5 @@
 >
   <h2>GAME OVER</h2>
   <h3>Your score: {{ score }}</h3>
-  <button class="btn btn-secondary">Play Again</button>
+  <button (click)="playAgain()" class="btn btn-secondary">Play Again</button>
 </div>
